unity (5.2.0-0ubuntu4~ppa1) precise; urgency=low

  * debian/control:
    - build-dep on latest compiz-dev and libcompizconfig0-dev for ABI break
  * debian/rules:
    - pick new abiversion file

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 09 Feb 2012 18:15:04 +0100

unity (5.2.0-0ubuntu3) precise; urgency=low

  * Cherry-pick:
    - additional fix for setting the right strut on startup

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 08 Feb 2012 08:09:31 +0100

unity (5.2.0-0ubuntu2) precise; urgency=low

  * Cherry-pick upstream:
    - a fix for a 5.0 crasher (LP: #916228)
    - default configuration now to "always lock"
  * debian/profile_upgrade/com.canonical.unity.unity.03.upgrade,
    debian/unity-common.install:
    - enabling user profile upgrade installation
    - switcher per workspace is now the default on upgrade
    - launcher is always locked by default, even on upgrade (LP: #928153)

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 07 Feb 2012 17:53:27 +0100

unity (5.2.0-0ubuntu1) precise; urgency=low

  * New upstream release.
    - Unity needs a way to switch (tab) between windows on current workspace
      (LP: #863399)
    - compiz crashed with SIGSEGV in BamfLauncherIcon::NameForWindow()
      (LP: #865840)
    - Gradual degradation in desktop performance. (LP: #888039)
    - compiz (unity) crashes with SIGSEGV when a window is minimized.
      (LP: #918329)
    - FavoriteStore external change support (LP: #681503)
    - Launcher - Make Launcher left of screen reveal more responsive and less
      prone to false positives (LP: #765819)
    - Window auto-maximise functionality should be disabled on monitors with a
      resolution above 1024 x 600  (LP: #797808)
    - Dash: very high latency responding to input (LP: #828582)
    - Dash - Behaviour of the 'All' button in the Dash filters broken in
      several ways   (LP: #841864)
    - alt-tab - The app title in the top left of the top bar should change as